# production

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.json
.claude/skills/produce-episode/: SKILL.md
legacy/: package.json
legacy/content/: kling-build-story.mjs  recover-stories.mjs
legacy/scripts/: generate-story-summaries.mjs  upload-shorts.mjs
saraandeva/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
saraandeva/content/: _debug-screenshot.mjs  _diag.mjs  _inspect-kling.mjs  _kling-actions-clip01.jsonl  _kling-actions-clipA.jsonl  _kling-actions-download.jsonl  _kling-actions-ep01-c01-full.jsonl  _kling-actions-ep01-clip01.jsonl  _kling_recording.js  _nav-and-download.mjs  _ss.mjs  applyWatermark.py  characterRegistry.js  classifyFaces.py  codegenCdp.mjs  codegenStandalone.mjs  connectCdp.mjs  downloadKlingClips.mjs  elements_registry.json  generateFamilyAvatars.py  generateGroupShot.py  generateProps.py  generateScenes.py  generateYoutubeBanner.py  generateYoutubeLogo.py  locationCatalog.yaml  openKlingTab.mjs  photoLabels.yaml  prepReferences.py  recordKlingActions.mjs  recordKlingSession.mjs  renameSourcePhotos.py  seriesStyle.js  seriesStyle.py  submitKlingClip.mjs  uploadEp08Elements.mjs  uploadToKling.mjs
saraandeva/docs/: README.md
saraandeva/tmp/: .gitignore  README.md
src/goreadling/: __init__.py  config.py
stories/: README.md  pyproject.toml  requirements-dev.txt
stories/scripts/: create-shorts.py
(+813 files in other folders)
